# CMakeTemplate

./: .gitignore  CMakeLists.txt  readme.md
include/: CMakeConfig.h.in  cmake_config.h  cmake_config.h.in
src/: PROJNAME.cpp  main.cpp
